--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
       </div>
     
     </main>
-    <script src="js/script.js"></script>
+    <script src="js/script.js" type="text/javascript"></script>
   </body>
 </html>
