Added manufacturer websites

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
   <body>
     <header>
-      <img id="logo" src="assets/images/OSL.png">
+      <img id="logo" src="assets/images/Walmart.png">
     </header>
     
     <main>     
