--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width initial=scale1">
     <link href="assets/css/main.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="assets/images/favicon.ico">
   </head>
   
   <body>
