--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
   <body>
     <header>
-      <img id="logo" src="assets/images/Walmart.jpg">
+      <img id="logo" src="assets/images/Walmart Wireless.jpg">
     </header>
     
     <main>     
